--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@clerk/clerk-react": "^5.43.1",
     "@hookform/resolvers": "^4.1.3",
     "@radix-ui/react-progress": "^1.1.7",
+    "@radix-ui/react-scroll-area": "^1.2.10",
     "@radix-ui/react-slot": "^1.2.3",
+    "@reduxjs/toolkit": "^2.8.2",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.511.0",
@@ -21,7 +23,11 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
+    "react-markdown": "^9.1.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.8.2",
+    "remark-gfm": "^4.0.0",
+    "property-information": "6.4.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.0",
     "tailwindcss-animate": "^1.0.7",
@@ -29,6 +35,7 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/typography": "^0.5.16",
     "@types/node": "^22.15.18",
     "@types/react": "^18.3.18",
     "@types/react-dom": "^18.3.5",
